# spurious_reconstruction

./: .gitignore  README.md  download.py  download_files.json  pyproject.toml
analysis/0_preprocessing/: BD_extract_CLIP_vision_features.py  BD_extract_Deeprecon_CLIP_text_features.py  BD_extract_NSD_CLIP_text_features.py  BD_vdvae_extract_features.py  README.md  extract_image_features_pytorch_SDR_VAE.py  extract_text_features_all_ave_texts_pytorch_SDR_text.py  iCNN_image_vgg19_feature_extraction.py  image_vgg19_feature_extraction.py
analysis/1_case_study/dataset-analysis/: Figure_UMAP_Deeprecon_clustering_parameters.py  Figure_UMAP_NSD_clustering_parameters.py  Figure_UMAP_NSD_default_parameters.py  Interactive_umap_plot.ipynb  (+7 more)
analysis/3_create_assets/: 04_Randomly_selected_in_a_cluster.ipynb  04_Visualize_UMAP.ipynb  S05_Visualize_UMAP_default_param.ipynb
analysis/data-analysis/: Check_NSD_images_lisence.ipynb  Perform_clusetering_UMAP.ipynb  Show_umap_plot.ipynb  umap_transform_deeprecon_text_features.py  umap_transform_nsd_text_features_parameter_sweep.py
analysis/formal-analysis/: Show_simulation_cluster_identification_results_sup.ipynb  _Fig08_simulation_ouput_dimension_collapse.py  _simulation_cluster_identificaiton_.py  simulation_utils.py
analysis/my_playground/: Fig08_supply_simulation_ouput_dimension_collapse.py  _Fig08_simulation_ouput_dimension_collapse_v2_param_sweep.py  _simulation_cluster_identificaiton.py  check_ImageNetTest_SimMat.ipynb  check_jupyter_cursor.ipynb  debug_simulation.py  simulate_output_dimsion_collapse.py  test_cursor.py  test_juputer_dash.ipynb  test_transformers.py
(+97 files in other folders)
